# scEvoNet

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py  utils.py
.github/workflows/: tests.yml
examples/: 01_quickstart_synthetic.ipynb  02_PBMC3k_full_workflow.ipynb  03_xenopus_embryo_legacy.ipynb
guide/: Guide.ipynb  HowToUse.ipynb
scevonet/: __init__.py  adata.py  net.py  pbmc_demo.py  programs.py  utils.py  validation.py  viz.py
scevonet/pl/: __init__.py  _basic.py
scevonet/tl/: __init__.py  _adata.py  _models.py  _programs.py  _validation.py
tests/: __init__.py  conftest.py  pbmc_test_data.py  test_core.py  test_programs.py  test_validation.py
