[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scevonet"
version = "2.1.1"
description = "Cell state and gene program networks from scRNA-seq (LightGBM / cross-dataset)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aleksandr Kotov", email = "alexander.o.kotov@gmail.com" }]
dependencies = [
    "lightgbm>=3.0.0",
    "pandas>=1.3",
    "numpy>=1.20",
    "networkx>=2.5",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
    "seaborn>=0.11",
]

[project.optional-dependencies]
anndata = ["anndata>=0.8"]
enrichment = ["gseapy>=1.0.5"]
dev = ["pytest>=7", "pytest-cov>=4"]
all = ["anndata>=0.8", "gseapy>=1.0.5"]

[project.urls]
Homepage = "https://github.com/Qotov/scEvoNet"

[tool.setuptools.packages.find]
include = ["scevonet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
